--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "type": "module",
   "types": "index.d.ts",
   "scripts": {
-    "test": "npm run test:eslint && npm run test:mocha && npm run test:karma && npm run test:dtslint && npm run test:exports",
+    "test": "jest",
     "test:eslint": "node bin/ssl_hotfix.js eslint lib/**/*.js",
     "test:dtslint": "dtslint --localTs node_modules/typescript/lib",
     "test:mocha": "node bin/ssl_hotfix.js mocha test/unit/**/*.js --timeout 30000 --exit",
@@ -85,6 +85,7 @@
     "@commitlint/cli": "^17.8.1",
     "@commitlint/config-conventional": "^17.8.1",
     "@release-it/conventional-changelog": "^5.1.1",
+    "@rollup/plugin-alias": "^5.1.0",
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-commonjs": "^15.1.0",
     "@rollup/plugin-json": "^4.1.0",
@@ -92,6 +93,7 @@
     "@rollup/plugin-node-resolve": "^9.0.0",
     "abortcontroller-polyfill": "^1.7.5",
     "auto-changelog": "^2.4.0",
+    "babel-jest": "^29.7.0",
     "body-parser": "^1.20.2",
     "chalk": "^5.3.0",
     "coveralls": "^3.1.1",
@@ -111,6 +113,7 @@
     "husky": "^8.0.3",
     "istanbul-instrumenter-loader": "^3.0.1",
     "jasmine-core": "^2.99.1",
+    "jest": "^29.7.0",
     "karma": "^6.3.17",
     "karma-chrome-launcher": "^3.2.0",
     "karma-firefox-launcher": "^2.1.2",
@@ -135,8 +138,7 @@
     "stream-throttle": "^0.1.3",
     "string-replace-async": "^3.0.2",
     "terser-webpack-plugin": "^4.2.3",
-    "typescript": "^4.9.5",
-    "@rollup/plugin-alias": "^5.1.0"
+    "typescript": "^4.9.5"
   },
   "browser": {
     "./lib/adapters/http.js": "./lib/helpers/null.js",
